# Fraudguard

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  deploy-k8s.sh  docker-compose.yml  init-db.sql  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-k8s-cicd.yml  ci-tests.yml
airflow/: Dockerfile  pyproject.toml
airflow/dags/: fraud_pipeline.py  fraud_retraining_ct.py
api/: Dockerfile  main.py  pyproject.toml
conception/: architecture.drawio  conception.md
docs/: api.md  architecture.md  deployment.md  ml-pipeline.md
grafana/provisioning/dashboards/: fraudguard.json  provider.yml
grafana/provisioning/datasources/: datasource.yml
k8s/api/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/overlays/dev/: deployment-patch.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
k8s/overlays/prod/: deployment-patch.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
k8s/platform/: airflow-scheduler-deployment.yaml  airflow-service.yaml  airflow-web-deployment.yaml  fraud_pipeline.py  fraud_retraining_ct.py  init-db.sql  kustomization.yaml  localstack-deployment.yaml  localstack-init-job.yaml  localstack-service.yaml  mlflow-deployment.yaml  mlflow-service.yaml  postgres-pvc.yaml  postgres-service.yaml  postgres-statefulset.yaml  shared-artifacts-pvc.yaml  webapp-deployment.yaml  webapp-service.yaml
load_tests/: locustfile.py
mlflow/: Dockerfile
prometheus/: prometheus.yml
tests/: conftest.py  test_api.py  test_api_extended.py  test_model.py  test_pipeline.py  test_preprocessing.py  test_retraining_extended.py  test_training.py
webapp/: Dockerfile  app.py  config.py  pyproject.toml
webapp/api/: __init__.py  client.py  models.py
webapp/components/: __init__.py  charts.py  header.py  sidebar.py  status_badge.py  transaction_form.py
webapp/pages/: __init__.py  batch_analysis.py  dashboard.py  model_metrics.py  single_prediction.py
webapp/styles/: __init__.py  theme.py
