[project]
name = "fraudguard-airflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.8.1, <2.9",
    "lightgbm>=4.3, <5",
    "scikit-learn>=1.4, <2",
    "mlflow>=2.11, <3",
    "pandas>=2.2, <3",
    "numpy>=1.26, <2",
    "imbalanced-learn>=0.12, <1",
    "joblib>=1.3, <2",
    "pyarrow>=15, <16",
    "psycopg2-binary>=2.9, <3",
    "matplotlib>=3.8, <4",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
