[project]
name = "fraudguard-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110, <1",
    "uvicorn[standard]>=0.29, <1",
    "mlflow>=2.11, <3",
    "scikit-learn>=1.4, <2",
    "lightgbm>=4.3, <5",
    "pandas>=2.2, <3",
    "numpy>=1.26, <2",
    "joblib>=1.3, <2",
    "psycopg2-binary>=2.9, <3",
    "pydantic>=2.6, <3",
    "dill>=0.3, <1",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
