[project]
name = "fraudguard-webapp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32, <2",
    "requests>=2.31, <3",
    "pandas>=2.2, <3",
    "numpy>=1.26, <2",
    "plotly>=5.20, <6",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"styles/theme.py" = ["E501"]   # CSS strings cannot be wrapped
